@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.github.myshzzx</groupId>
 		<artifactId>mlib</artifactId>
-		<version>1.0.1-SNAPSHOT</version>
+		<version>2.0</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -15,7 +15,7 @@
 		<dependency>
 			<groupId>com.github.myshzzx</groupId>
 			<artifactId>mlib-core</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
+			<version>2.0</version>
 		</dependency>
 
 		<dependency>
@@ -53,7 +53,8 @@
 					<target>${maven.compiler.target}</target>
 					<encoding>${sourceEncoding}</encoding>
 					<compilerArgs>
-						<arg>--add-exports=java.base/sun.security.util=mlib.cluster</arg>
+<!--						<arg>&#45;&#45;add-exports=java.base/sun.security.util=mlib.cluster</arg>-->
+<!--						<arg>&#45;&#45;add-exports=java.base/sun.security.util=ALL-UNNAMED</arg>-->
 					</compilerArgs>
 				</configuration>
 				<dependencies>
